--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CineExplorer</title>
-    <link rel="stylesheet" href="styles.css/style.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
   <div class="container">
@@ -23,7 +23,24 @@
       </div>
     </header>
     
-    <main class="movie-display">
+    <main id="main-content">
+      <section id="most-viewed">
+        <h2 class="section-title">Most Viewed Movies in <span id="current-year"></span></h2>
+        <div class="movie-list"></div>
+      </section>
+
+      <section id="box-office-hits">
+        <h2 class="section-title">Box Office Hits</h2>
+        <div class="movie-list"></div>
+      </section>
+
+      <section id="top-rated">
+        <h2 class="section-title">Top Rated Movies</h2>
+        <div class="movie-list"></div>
+      </section>
+    </main>
+
+    <div id="movie-details" class="movie-display" style="display: none;">
       <div id="movie-header" class="movie-header">
         <div class="movie-title-container">
           <h1 id="movie-title" class="movie-title">Loading...</h1>
@@ -52,7 +69,7 @@
         <h2 class="section-title">Similar Movies</h2>
         <div id="similar-movies" class="similar-movies"></div>
       </div>
-    </main>
+    </div>
   </div>
 
   <div id="popup-overlay" class="popup-overlay" style="display: none;">
