--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CineExplorer</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
   <div class="container">
@@ -85,6 +86,6 @@
     </div>
   </div>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="scripts.js/script.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
