--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CineExplorer - Your Cinematic Journey</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
 
   <body>
@@ -18,6 +22,7 @@
             id="search-input"
             placeholder="Discover new movies..."
           />
+          <button id="search-button" aria-label="Search">🔍</button>
         </div>
         <div class="controls">
           <select id="language-select">
@@ -113,7 +118,6 @@
         <div id="popup-filmography" class="popup-filmography"></div>
       </div>
     </div>
-
     <script src="./scripts/script.js"></script>
   </body>
 </html>
